<resources>
    <string name="app_name">PADCAssignment3</string>
    <string name="action_settings">Settings</string>
    <string name="terms_conditions_privacy_policy"><i><u>Terms &amp; Conditions and Privacy Policy</u></i></string>
    <string name="sign_in_with_facebook">Sign In With <b><b>Facebook</b></b></string>

    <string name="sign_in_with_email"><b>Sign In </b>With Email</string>
    <string name="sign_up_with_email"><b>Sign Up </b>With Email</string>
    <string name="sign_in_with_google">Sign In With <b>Google</b></string>
    <string name="sign_in_with_twitter">Sign In With <b>Twitter</b></string>

</resources>
